<resources>
    <string name="app_name">Trust In Heart Demo</string>
    <string name="action_settings">Settings</string>
    <string name="tapToBegin">Tap To Begin the Demo!</string>
    <string name="gameBy">A Game Demo By Aaron Turner</string>
    <string name="year">2014, 2015</string>
    <string name="noComply">No Comply Games</string>
    <string name="quit">Quit</string>
    <string name="continueText">Continue</string>
    <string name="newChar">New</string>
    <string name="deleteChar">Delete</string>
    <string name="deleteConfirm">Are you sure you would like to delete this character?
        This action can NOT be undone.</string>
    <string name="editChar">Edit</string>
    <string name="welcomeRRPPGG">A Hero\'s Quest Begins</string>
    <string name="editTextHint">Enter Save File Name</string>
    <string name="editFile">Please enter a name for the character file below</string>
    <string name="importChar">Import</string>
     <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="shop">Shops</string>
    <string name="character">Character</string>
    <string name="options">Options</string>
    <string name="title_activity_battle">Battle</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading...</string>
    <string name="fight">Fight</string>
    <string name="defend">Defend</string>
    <string name="items">Items</string>
    <string name="run">Run</string>
    <string name="title_activity_creator">Character Creator</string>
    <string name="nameQuestion">What\'s your name?</string>
    <string name="genderQuestion">Are you a boy or girl?</string>
    <string name="skinQuestion">How would you describe your skin tone?</string>
    <string name="dude">Boy</string>
    <string name="lady">Girl</string>
    <string name="dark">Dark</string>
    <string name="tan">Tan</string>
    <string name="light">Light</string>
    <string name="statQuestion">Choose a class:</string>
    <string name="tank">Tank - Known for being able to take a lot of damage. They specialize in hit points.
         They are represented by wearing the color green.
        Their special move is "Block", allowing them to cancel enemy damage for a turn. However, it can only be used
        once per battle.</string>
    <string name="warrior">Warrior - Known for being able to deal a lot of damage. They specialize in strength.
         They are represented by wearing the color yellow.
        Their special move is "Charge", allowing them to charge up an attack for a two turns, and get a critical hit
        on their third</string>
    <string name="mage">Mage - Known for being able to use magic. They specialize in intelligence.
         They are represented by wearing the color blue.
        Their special move is "Magic", allowing them to use the magic bounded to their weapons</string>
    <string name="rogue">Rogue - Known for being able to land critical hits and dodge enemy attacks often.
         They are represented by wearing the color grey.
        They specialize in dexterity. Their special move is "Counter", allowing them to reduce damage by the
        enemy and themselves by half. </string>
    <string name="finish">The person above this text is who you will be, save yourself before you delete yourself!</string>
    <string name="save">Save</string>
    <string name="reset">Restart</string>
    <string name="crit">It\'s a critical hit!\n</string>
    <string name="ecrit">The enemy attack was critical!\n</string>
    <string name="dodge">You dodged the hit!\n</string>
    <string name="edodge">Your attack has been dodged!\n</string>
    <string name="title_activity_char_edit">Character</string>
    <string name="equipment">Equipment</string>
    <string name="skills">Skills</string>
    <string name="totalStats">Total Stats</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="viewItems">Items</string>
    <string name="changeEquip">Equipment</string>
    <string name="cancel">Cancel</string>
    <string name="journal">Journal</string>
     <string name="herosjournal">Trust In Heart</string>
    <string name="title_activity_overworld">Overworld</string>
    <string name="itemshop">HP Girl</string>
    <string name="HPshop">Tank Y Moi</string>
    <string name="strshop">Swords Of The Down</string>
    <string name="intshop">MGMP</string>
    <string name="dexshop">Rogue Mind Tricks</string>
     <string name="equip">Equip</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
     <string name="special">Special</string>
    <string name="shopConfirm">Are you sure you would like to buy</string>
    <string name="shopBuy">Thank you for shopping with us!</string>
    <string name="shopEquip">Would you like to equip this item now?</string>
    <string name="shopSell">Would you like to sell your old</string>
    <string name="shopSure">Are you sure?</string>
     <string name="shopCantSell">You cannot sell an item you have equipped!</string>
    <string name="shopFor">for</string>
     <string name="shopNo">It\'s fine! Please, take your time!</string>
    <string name="sold">Sold!</string>
    <string name="equipped">(Equipped)</string>
    <string name="cantEquip">You cannot equip something that is already equipped!</string>
    <string name="itemEquip">You cannot equip an item!</string>
    <string name="equipConfirm">It was successfully equipped!</string>
     <string name="selectChar">Choose Your Character</string>
      <string name="importCharTitle">Import Character</string>
     <string name="fileFormat">Trust In Heart save files must follow this format: "Trust In Heart-(Name).sav"</string>
    <string name="entry1">\nEntry #1\n</string>
    <string name="entry2">\nEntry #2\n</string>
    <string name="entry3">\nEntry #3\n</string>
   <string name="store1">Welcome! We don\'t discriminate to any class, as long as you have the required
       skills, you can buy anything you\'d like!</string>
   <string name="store2">Hello! You know a mage\'s magic spell has base damage, but the spell grows stronger
       with intelligence, no matter the base damage!</string>
   <string name="store3">Hi! I just received a note from the head programmer, he says "Thank you for playing
       Trust In Heart!" And he wishes you a nice day!</string>
   <string name="store4">Howdy! Dexterity is a lot more important than it seems!
       Dexterity determines you chances of running, dodging, and even critical hits!</string>
   <string name="store5">Sup! We shop keepers like to play games like everyone else! Lately, I\'ve been
       playing a lot of indie games...</string>
   <string name="store6">Hiya! The shops have been low on customers lately, if you like this game, I\'d appreciate it if
       you would tell your friends! It\'ll help out the shopkeepers and the developer! </string>
   <string name="store7">Hiya! The shops have been low on customers lately, if you like this game, I\'d appreciate it if
       you would tell your friends! It\'ll help out the shopkeepers and the developer!</string>
   <string name="store8">Hiya! The shops have been low on customers lately, if you like this game, I\'d appreciate it if
       you would tell your friends! It\'ll help out the shopkeepers and the developer!</string>
   <string name="store9">Hiya! The shops have been low on customers lately, if you like this game, I\'d appreciate it if
       you would tell your friends! It\'ll help out the shopkeepers and the developer!</string>
   <string name="store10">Hello there! I heard the journal you\'ve been carrying around is a really good read.
       You heroes have the most interesting stories. You should check it out from the main menu!</string>
	<string name="store11">Good Afternoon/Evening/Morning! I don\'t get out of the shop much, I don\'t even know
	    what time it is. But hey, I\'ve always liked working hero\'s retail! </string>
	<string name="store12">Aloha! You know, It\'s not just me working the store, I\'m just part of a big family of twins...
	    Kind of like a nurse and a police officer I heard about. But, Those might just be rumors... </string>
	<string name="store13">Hey There! What does Trust In Heart even mean? All the kids are talking about it these days. Anyways, 
	    why don\t you browse my wares? </string>
	<string name="store14">Hello! Do you hear that music in the background? I think it\'s the kids down the
	    block with their music about chips...</string>
	<string name="store15">ERROR COULD NOT FIND @STRING/WITTYSHOPSAYING </string>
	<string name="store16">Welcome into my store! Have you ever felt like leaving the hero\'s life
	    for a skateboard and broken bones? Yeah, me neither...</string>
	<string name="store17">Yo! You know we store owners used to be in a group called "X-Pressive Arts"?
	    We were all the rage back in the days!</string>
	<string name="store18">What\'s up? The other day a group of guys came in asking about some abulm by
	    some band. It had something to do with Trojans and acts in a play...</string>
	<string name="store19">Howdy! Before you ask... No, we do not sell fuzzy pickles...</string>
	 <string name="store20">Hi! You know back in my day, our healing items were the active ingredient.
	     And we would get much more health compared to the watered down stuff you heroes have today...</string>
	 <string name="store21">Hiya! I asked this guy if he liked RPGs the other day. He didn\'t respond the way
	     I had hoped... People and their shooting games... </string>
	 <string name="store22">Hello there! Welcome to the Super Hyper Shop EX Ultra! And, we happen to be
	     the special arcade edition!</string>
	<string name="store23">Salutations! You ever noticed your score goes down when you buy, and it goes up
	    when you sell? It\'s because your score is determined by guaps, level, wins, and losses!</string>
	<string name="store24">Hello valued customer! Would you like to pre-order anything with your 
	    purchase today?</string>
	<string name="store25">Hello! Each skill is unique and has a lot of good benefits, You do not have to 
	    follow your primary class skill, be adventurous!</string>
	<string name="store26">Hiya! You know, since us shop keepers aren\'t held down by the man, we can say whatever we want!
	    For example, "I LOVE PIZZA!". Ha! Take that programming!</string>
	<string name="store27">Hello valued customer! Would you like to pre-order anything with your 
	    purchase today?</string>
	<string name="store28">Oh no! I just realized my mom will be home before the mud dries! 
	    Can we make this quick?</string>
	<string name="store29">Welcome to the store! Where helping heroes is our number two priority! You don\'t
	    want to know what our number one is...</string>
	<string name="store30">Yo! Out here we only have two real wars... The one with those ugly monsters, and
	    the one about which console is better. And one of them we can actually win... </string>
	<string name="store31">Hey There! Don\'t be afraid to experiment with other skills other than your primary
	    one. We shop keepers encourage it! </string>
	<string name="store32">Hello! Each skill is unique and has a lot of good benefits, You do not have to 
	    follow your primary class skill, be adventurous!</string>
	<string name="store33">What\'s Up! Some of the other shopkeepers get lonely when buisiness is slow. You
	    should check out what they have to offer some time!</string>
	<string name="store34">Hiya! Sometimes I wonder how people build a game all by themselves. They must
	    be using some kind of computer magic or something...</string>
	  <string name="store35">Welcome to the store! You know that higher intelligence that you have will give you better
	        prices in the stores? You heroes are so persuasive!</string>
</resources>